# argos3-pipuck-omnidirectional-camera

./: README.md
src/: CMakeLists.txt
src/cmake/: ARGoSBuildChecks.cmake
src/plugins/robots/pi-puck/control_interface/: ci_pipuck_omnidirectional_camera_sensor.cpp  ci_pipuck_omnidirectional_camera_sensor.h
src/plugins/robots/pi-puck/hardware/: pipuck_omnidirectional_camera_default_sensor.cpp  pipuck_omnidirectional_camera_default_sensor.h
src/plugins/robots/pi-puck/simulator/: pipuck_omnidirectional_camera_default_sensor.cpp  pipuck_omnidirectional_camera_default_sensor.h
src/testing/: test_omnidirectional_camera.lua  test_omnidirectional_camera_hardware.argos.in  test_omnidirectional_camera_simulator.argos.in
